--- a/about.html
+++ b/about.html
@@ -179,6 +179,7 @@
         <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="images/clients/adal sut.jpg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="images/clients/Turkmengaz.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/HYUNDAI ENGINEERING.jpg" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="images/clients/alkar-insaat-1.png" class="img-fluid" alt=""></div>
             <!-- <div class="swiper-slide"><img src="images/clients/bend-general-trading.png" class="img-fluid" alt=""></div> -->
@@ -203,17 +204,18 @@
                       <h2 class="lang text-center">БЛАГОТВОРИТЕЛЬНОСТЬ</h2>
                         <h3 class="lang header text-center" key="about2" style="font:28px; font-weight: bold;">«Добрые дела дают силы нам самим и побуждают к добрым поступкам других»</h3>
                           <div class="row mb-3 mt-5">
-                            <img class="img-fluid col-3" src="images/ToreAhunMetjidi.jpg" alt="Töre Ahun Metjidi">
-                            <P class="col-9 text-end">Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
+                            <img class="img-fluid col-lg-3" src="images/ToreAhunMetjidi.jpg" alt="Töre Ahun Metjidi">
+                            <P class="col-lg-9 text-end">Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
                           </div>
                           <!-- <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь</P> -->
                             <div class="row mb-3 mt-5">
+                              <div class="img-fluid col-4 flyer2"><img class="ramka" src="images/minnetdarlyk/reabilitasiya copy.jpg" style="height: 92.1%;" alt="FLYER"></div>
                               <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/asgabat.jpg"><img class="ramka" style="width:100%" src="images/minnetdarlyk/asgabat.jpg" alt="Minnetdarlyk haty"></a></div>
-                              <p class="col-10 text-end">Для обеспечения восстановительного лечения инвалидов с детства и инвалидов-спортсменов нами была оказана финансовая помощь Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат.</p>
+                              <p class="col-6 text-end">Для обеспечения восстановительного лечения инвалидов с детства и инвалидов-спортсменов нами была оказана финансовая помощь Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат.</p>
                             </div>
                             <div class="row mb-3 mt-5">
                               <div class="img-fluid col-2 flyer"><img class="ramka" src="images/minnetdarlyk/olympiada_flyer.jpg" style="width:66%; height: auto;" alt="FLYER"></div>
-                              <div class="img-fluid col-2 flyer_near"><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img class="ramka" style="width:100%" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
+                              <div class="img-fluid col-2 flyer_near"><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img style="width:100%; border: 0.3px dotted grey;" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
                               <p class="col-8 text-end flyer_text">С целью приобретения спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участие люди с синдромом Дауна и инвалиды по интеллекту были переданы денежные средства Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ).</p>
                             </div>
                             <div class="row mb-3 mt-5">
