--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
           
           <div class="col-md-4">
             <div class="contact-address">
-              <i class="fa fa-fax" style="color: black; opacity: 0.8; font-size: 48px;"></i>
-              <h3 class="lang" key="phone_number">факс</h3>
+              <i class="fa fa-fax mt-md-2" style="color: black; opacity: 0.8; font-size: 48px;"></i>
+              <h3 class="lang mt-md-2" key="phone_number">факс</h3>
               <p><a href="tel:+99324325098">+99324325098</a></p>
             </div>
           </div>
