--- a/services.html
+++ b/services.html
@@ -218,8 +218,24 @@
         </div>
         </div>
        
-    </section>
-    <!-- End of How We work section -->
+
+      </section>
+      <!-- End of How We work section -->
+  
+      <section id="about" data-aos="fade-up" style="margin-top: -5rem;">
+        <div class="container">
+     <div class="section-header">
+        <h2 class="whywe lang text-center" key="why_we" data-aos="fade-up">«НАШ УСПЕХ – ВАША БЕЗОПАСНОСТЬ»</h2>
+      </div>
+          <div class="content">
+            <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
+          </div>
+          <div class="row">
+            <div class="col-6"><img src="images/minnetdarlyk/" alt=""></div>
+          </div>
+        </div>
+      </section>
+
 
   </main><!-- End #main -->
 
