--- a/gallery.html
+++ b/gallery.html
@@ -89,29 +89,29 @@
           <div class="setir" data-aos="fade-up">
             <div class="gallery__card">
               <img src="images/gallery/5.webp" alt="barlag">
-              <div class="gallery__text">Barlag gecirme ishleri</div>
+              <div class="gallery__text">1 <br> Shu yere tekst yazyp bolyar</div>
             </div>
             <div class="gallery__card"><img src="images/gallery/6.webp" alt="">
-            <div class="gallery__text">Men ustunde ishlap otyn hazir NURY AGA</div>
+            <div class="gallery__text">4 <br> Men ustunde ishlap otyn hazir NURY AGA</div>
             </div>
-            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt=""></div>
+            <div class="gallery__card"><img src="images/gallery/pickup.webp" alt="">
+              <div class="gallery__text">7</div></div>
             <!-- <img src="images/gallery/2.webp" alt=""> -->
           </div>
           <div class="setir" data-aos="fade-up">
-            <div class="gallery__card"><img src="images/gallery/1.webp" alt=""></div>
-            <div class="gallery__card"><img src="images/gallery/8.webp" alt=""></div>
-            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""></div>
+            <div class="gallery__card"><img src="images/gallery/1.webp" alt=""><div class="gallery__text">2</div></div>
+            <div class="gallery__card"><img src="images/gallery/8.webp" alt=""><div class="gallery__text">5</div></div>
+            <div class="gallery__card"><img src="images/gallery/4.1.webp" alt=""><div class="gallery__text">8</div></div>
             
           </div>
           <div class="setir" data-aos="fade-down">
-            <div class="gallery__card"><img src="images/gallery/3.webp" alt=""></div>
-            <div class="gallery__card"><img src="images/gallery/7.webp" alt=""></div>
-            
+            <div class="gallery__card"><img src="images/gallery/3.webp" alt=""><div class="gallery__text">3</div></div>
+            <div class="gallery__card"><img src="images/gallery/7.webp" alt=""><div class="gallery__text">6</div></div>
           </div>
         </div>
 
           <div class="gallery" data-aos="fade-left">
-            <div class="gallery__card"><img src="images/gallery/12.webp" alt=""></div>
+            <div class="gallery__card"><img src="images/gallery/12.webp" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
           </div>
       </div>
 
