--- a/gallery.html
+++ b/gallery.html
@@ -111,7 +111,8 @@
         </div>
 
           <div class="gallery" data-aos="fade-left">
-            <div class="gallery__card"><img src="images/gallery/12.webp" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
+            <div class="gallery__card"><img src="images/gallery/day_shift.jpg" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
+            <div class="gallery__card"><img src="images/gallery/night_shift.jpg" alt=""><div class="gallery__text">Gundizki ya-da gijeki smen</div></div>
           </div>
       </div>
 
