--- a/services.html
+++ b/services.html
@@ -231,8 +231,7 @@
             <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
           </div>
           <div class="row">
-            <div class="col-6"><img src="images/minnetdarlyk/" alt=""></div>
-          </div>
+            <div class="img-fluid col-lg-2 mt-4 mx-auto"><a target="_blank" href="images/minnetdarlyk/Recomment letter from HEC.jpg"><img class="ramkaly" style="width:100%" src="images/minnetdarlyk/Recomment letter from HEC.jpg" alt="Minnetdarlyk haty"></a></div>          </div>
         </div>
       </section>
 
