--- a/services.html
+++ b/services.html
@@ -230,9 +230,13 @@
           <div class="content">
             <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
           </div>
-          <div class="row">
-            <div class="img-fluid col-lg-2 mt-4 mx-auto"><a target="_blank" href="images/minnetdarlyk/Recomment letter from HEC.jpg"><img class="ramkaly" style="width:100%" src="images/minnetdarlyk/Recomment letter from HEC.jpg" alt="Minnetdarlyk haty"></a></div>          </div>
-        </div>
+          <div class="row justify-content-center mt-4">
+            <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/HYUNDAI/001.webp"><img class="ramkaly" style="width:100%" src="images/minnetdarlyk/HYUNDAI/001.webp" alt="Minnetdarlyk haty"></a></div>
+            <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/HYUNDAI/002.webp"><img class="ramkaly" style="width:100%" src="images/minnetdarlyk/HYUNDAI/002.webp" alt="Minnetdarlyk haty"></a></div>
+            <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/HYUNDAI/003.webp"><img class="ramkaly" style="width:100%" src="images/minnetdarlyk/HYUNDAI/003.webp" alt="Minnetdarlyk haty"></a></div>
+            <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/HYUNDAI/004.webp"><img class="ramkaly" style="width:100%" src="images/minnetdarlyk/HYUNDAI/004.webp" alt="Minnetdarlyk haty"></a></div>
+          </div>
+          </div>
       </section>
 
 
