--- a/index.html
+++ b/index.html
@@ -110,12 +110,15 @@
     <section id="about">
       <div class="container section-header" data-aos="fade-up">
         <div class="row">
-
+          
+          <!-- FIXME: KOPYASY HAYSYNY HALASA SHONY GALDYRMALY -->
           <div class="col-lg-5 about-img">
-            <img src="images/logo effects/солнце.png" class="back-img" alt="shohle">
+            <img src="images/logo effects/sky2.webp" class="back-img-1" alt="shohle">
+            <img src="images/logo effects/wintery-sunburst-last-white2.png" class="middle-img"></img>
             <img src="images/logo/about-img-500px.png" class="main-img" alt="logotibimiz">
             <!-- <div class="sunshine"></div> -->
           </div>
+
           <div class="col-lg-7 content">
             <h2 class="lang" key="about_short">О нас</h2>
               <h3 class="lang header" key="about2">Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</h3>
@@ -129,7 +132,6 @@
                 <a class="learnmore lang" key="learn_more" href="about.html">Узнать больше</a>
             </div>
           </div>
-
         </div>
 
 
