--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           
           <!-- FIXME: KOPYASY HAYSYNY HALASA SHONY GALDYRMALY -->
           <div class="col-lg-5 about-img">
-            <img src="images/logo effects/sky2.webp" class="back-img-1" alt="shohle">
+            <img src="images/logo effects/sky2.webp" class="back-img" alt="shohle">
             <img src="images/logo effects/wintery-sunburst-last-white2.png" class="middle-img"></img>
             <img src="images/logo/about-img-500px.png" class="main-img" alt="logotibimiz">
             <!-- <div class="sunshine"></div> -->
