--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div id="logo">
         <div><img class="logotype" src="images/logotype.png" alt=""></div>
         <div>
-          <h1><a href="index.html" class="logotip lang">"Zehinli Doganlar" <span>Hojalyk Jemgyýeti</span></a></h1>
+          <h1><a href="index.html" class="logotip lang">"Zehinli Doganlar" <span class="lang">Hojalyk Jemgyýeti</span></a></h1>
         </div>
         <!-- Uncomment below if you prefer to use an image logo -->
       </div>
@@ -69,12 +69,12 @@
           <li><a class="nav-link scrollto lang" href="gallery.html" key="gallery">Галерея</a></li>
           <li><a class="nav-link scrollto lang" href="contact.html" key="contact">Контакты</a></li>
           <li class="dropdown">
-            <a href="#"><span key="active_lang" class="lang">EN</span><i class="bi bi-chevron-down langs"></i></a>
+            <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a>
             <ul>
-              <li><a href="#" onclick="changeLang('tm');" class="lang">TM</a></li>
+              <li><a href="#" onclick="changeLang('tm');" class="lang">Türkmen</a></li>
               </li>
-              <li><a href="#" onclick="changeLang('ru');" class="lang">RU</a></li>
-              <li><a href="#" onclick="changeLang('en');" class="lang">EN</a></li>
+              <li><a href="#" onclick="changeLang('ru');" class="lang">Русский</a></li>
+              <li><a href="#" onclick="changeLang('en');" class="lang">English</a></li>
             </ul>
           </li>
         </ul>
@@ -88,7 +88,7 @@
   <section id="hero" class="curved">
 
     <div class="hero-content slogan" data-aos="fade-up">
-      <h2 class="lang" key="bitewilik1">Наш девиз: <br> <span>«целостность & сохранность»</span></h2> 
+      <h2 class="lang" key="bitewilik1">Наш девиз: <br> <span class="lang" key="bitewilik2" >«целостность & сохранность»</span></h2> 
       <!-- <img src="images/logotype.png" alt=""> -->
     </div>
 
@@ -120,8 +120,8 @@
           </div>
 
           <div class="col-lg-7 content">
-            <h2 class="lang" key="about_short">О нас</h2>
-              <h3 class="lang header" key="about2">Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</h3>
+            <h2 class="lang" key="aboutus_title">О нас</h2>
+              <h3 class="lang header" key="about_shortly">Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</h3>
 
             <!-- <ul>
               <li><i class="bi bi-check-circle lang"></i></li>
@@ -133,8 +133,6 @@
             </div>
           </div>
         </div>
-
-
       </div>
     </section><!-- End About Section -->
 
@@ -182,7 +180,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_1">Невооруженная дневная и ночная охрана</h2>
+                <h2 class="lang" key="kartocka1_f">Невооруженная дневная и ночная охрана</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka1">Данный вид услуги предполагает нахождение двух смен охранников на стационарных постах в течение 12 часов, а также обход и объезд периметра объекта. Допускается применение других режимов работы (7-и,8-и,12-и часовой или др) для охранников в рамках КЗоТ. Обязательным требованием является постоянное присутствие одного охранника на посту.</p>
@@ -194,7 +192,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_2">Охрана вахтовым методом</h2>
+                <h2 class="lang" key="kartocka2_f">Охрана вахтовым методом</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka2">При применении вахтового метода работы для охранников (12 часовой рабочий день), за сутки на посту будут дежурить 2 охранника, один будет дежурить в дневную смену, а другой в ночную смену. После 15 дневной вахтовой смены на дежурство заступают два новых охранника. Таким образом достигается круглосуточное, постоянное присутствие одного охранника на посту охраны. В общем на таком посту охраны задействовано 4 человека в течении месяца.</p>
@@ -206,7 +204,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_3">Обеспечение внутри объектного и пропускного режима</h2>
+                <h2 class="lang" key="kartocka3_f">Обеспечение внутри объектного и пропускного режима</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka3">Этот вид охранной услуги предполагает оборудование контрольно-пропускного пункта предупредительными знаками и турникетами для осуществления контроля за пропуском людей и транспорта. Здесь предполагается больше охранников, чем в стационарных постах, так как им приходится одновременно выполнят больше объем работы как досмотр транспортных средств, так и большой поток людей.</p>
@@ -218,7 +216,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_4">Сопровождение грузов и машина сопровождения</h2>
+                <h2 class="lang" key="kartocka4_f">Сопровождение грузов и машина сопровождения</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka4">Данный вид охранной деятельности предполагает обеспечение транспортом, охраной и сопровождение Заказчика в течение 24 часов в сутки. По требованию Заказчика наша компания имеет возможность предоставлять водителей и охранников со знанием иностранных языков.</p>
@@ -230,7 +228,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_5">Монтаж систем объектовой охраны</h2>
+                <h2 class="lang" key="kartocka5_f">Монтаж систем объектовой охраны</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka5">Данная услуга предполагает по согласованию Заказчика установку охранной сигнализации и системы видеонаблюдения для визуального контроля территории, складов и периметра охраняемого объекта с целью предотвращения незаконных действий со стороны нарушителей.</p>
@@ -242,7 +240,7 @@
             <div class="flip-box-inner">
               <div class="flip-box-front">
                 <div class="kart__surat"><img src="images/flipcard/1.webp" alt=""></div>
-                <h2 class="lang" key="kartocka_fron_h2_6">Обслуживание системы объектовой охраны</h2>
+                <h2 class="lang" key="kartocka6_f">Обслуживание системы объектовой охраны</h2>
               </div>
               <div class="flip-box-back">
                 <p class="lang" key="kartocka6">Данная услуга предполагает техническое обслуживание установленной охранной сигнализации и системы видеонаблюдения для бесперебойной работы установленного оборудования.</p>
@@ -294,21 +292,21 @@
 
           <div class="container" data-aos="fade-up">
             <ul class="works">
-              <li class="list_step">Надежную профессиональную охрану объекта/периметра</li>
-              <li class="list_step">Минимизацию рисков проникновения посторонних лиц на территорию охраняемого объекта</li>
-              <li class="list_step">Сохранность имущества</li>
-              <li class="list_step">Безопасность персонала</li>
-              <li class="list_step">Личную безопасность</li>
-              <li class="list_step">Предотвращение конфликтных ситуаций</li>
-              <li class="list_step">Быструю и профессиональную реакцию во время различных инцидентов</li>
-              <li class="list_step">Подбор, монтаж, настройку и обслуживание комплексных систем безопасности и видеонаблюдения</li>
-              <li class="list_step">Гарантию конфиденциальности</li>
-              <li class="list_step">Законные действия в области защиты имущества Заказчика</li>
-              <li class="list_step">Постоянный контроль качества работы каждого сотрудника</li>
-              <li class="list_step">Круглосуточную поддержку</li>
-              <li class="list_step">Спокойную жизнь и возможность сконцентрировать силы на своих целях, не беспокоясь о безопасности</li>
+              <li class="list_step lang" key="ls1" >Надежную профессиональную охрану объекта/периметра</li>
+              <li class="list_step lang" key="ls2" >Минимизацию рисков проникновения посторонних лиц на территорию охраняемого объекта</li>
+              <li class="list_step lang" key="ls3" >Сохранность имущества</li>
+              <li class="list_step lang" key="ls4" >Безопасность персонала</li>
+              <li class="list_step lang" key="ls5" >Личную безопасность</li>
+              <li class="list_step lang" key="ls6" >Предотвращение конфликтных ситуаций</li>
+              <li class="list_step lang" key="ls7" >Быструю и профессиональную реакцию во время различных инцидентов</li>
+              <li class="list_step lang" key="ls8" >Подбор, монтаж, настройку и обслуживание комплексных систем безопасности и видеонаблюдения</li>
+              <li class="list_step lang" key="ls9" >Гарантию конфиденциальности</li>
+              <li class="list_step lang" key="ls10" >Законные действия в области защиты имущества Заказчика</li>
+              <li class="list_step lang" key="ls11" >Постоянный контроль качества работы каждого сотрудника</li>
+              <li class="list_step lang" key="ls12" >Круглосуточную поддержку</li>
+              <li class="list_step lang" key="ls13" >Спокойную жизнь и возможность сконцентрировать силы на своих целях, не беспокоясь о безопасности</li>
             </ul>
-            <h3 class="summary">Охранная компания <b>«Зехинли доганлар»</b> - это разумный выбор для защиты любого объекта. Мы являемся признанным лидером в области безопасности, поддерживая охранные стандарты и обеспечивая сохранность всего, за что отвечаем. </h3>
+            <h3 class="summary lang" key="summary" >Охранная компания <b>«Зехинли доганлар»</b> - это разумный выбор для защиты любого объекта. Мы являемся признанным лидером в области безопасности, поддерживая охранные стандарты и обеспечивая сохранность всего, за что отвечаем. </h3>
           </div>
         </section>
         <!-- END OF WORK LIST SECTION -->
